build/k8s/consul/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-consul
  namespace: default
  annotations:
    kubernets.io/ingress.class: "nginx"
spec:
  rules:
    - host: consul.my.com.local
      http:
        paths:
          - path: /
            backend:
              serviceName: consul
              servicePort: 8500
